--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -220,8 +220,8 @@ function enableOrDisableCvsFieldsAndUpdateScmSpec() {
   <td>Build trigger mechanism</td>
   <td>
 		<select name="trigger" id="trigger">
-			<option value="none">None</option>
-			<option value="xmlrpc" selected>XMLRPC trigger</option>
+			<option value="none">Disabled</option>
+			<option value="xmlrpc" selected>Upon commit (XMLRPC)</option>
 			<!--option value="email">Email trigger</option>
 			<option value="polling">Polling</option-->
 		</select>
