--- a/trunk/server/damagecontrol/web/project_dashboard.erb
+++ b/trunk/server/damagecontrol/web/project_dashboard.erb
@@ -8,10 +8,12 @@
     <td class="dashboard">Last completed build</td>
     <td class="dashboard"><img src="<%= self.get_status_image(:last_completed_build, project_name) %>"/> <%= last_status %></td>
   </tr>
+<% if(last_completed_build != current_build) %>
   <tr class="dashboard">
     <td class="dashboard">Current build</td>
     <td class="dashboard"><img src="<%= self.get_status_image(:current_build, project_name) %>"/> <%= current_status %></td>
   </tr>
+<% end %>
 </table>
 
 </body></html>
