expand scm on load

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -3,7 +3,7 @@
 <title>Example Design</title>
 <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
-<body onLoad="distributeCvsrootFields();showScm(<%= project_config['scm_type'] %>)">
+<body onLoad="distributeCvsrootFields();showScm('<%= project_config['scm_type'] %>')">
 <script><!--
 
 /*
