--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -21,7 +21,7 @@
       end_row = i == project_count || i % cells_per_row == (cells_per_row - 1)
       href = "project?project_name=#{project}"
       
-      image = self.get_status_image(:current_build, project)
+      image = self.status_image(:current_build, project)
     %>
 
       <% if start_row then %>
