--- a/trunk/server/damagecontrol/web/project_dashboard.erb
+++ b/trunk/server/damagecontrol/web/project_dashboard.erb
@@ -21,17 +21,19 @@
     <td class="dashboard_header" colspan="2">Build history</td>
   </tr>
   <tr class="dashboard">
-    <td class="dashboard_header">Timestamp</a></td>
+    <td class="dashboard_header">Timestamp</td>
     <td class="dashboard_header">Status</td>
     <td class="dashboard_header">Time</td>
   </tr>
 <%
   builds = build_history_repository.build_history(project_name).reverse
   builds.each do |build|
+    color = if build.successful? then "green" else "red" end
+    image = "images/#{color}-16.gif"
 %>
   <tr class="dashboard">
     <td class="dashboard"><a href="log?project_name=<%= project_name %>&timestamp=<%= build.timestamp %>"><%= build.timestamp %></a></td>
-    <td class="dashboard"><%= build.status %></td>
+    <td class="dashboard"><img src="<%= image %>" />&nbsp;<%= build.status %></td>
     <td class="dashboard"><%= build.duration_formatted %></td>
   </tr>
 <% end %>
