--- a/trunk/server/damagecontrol/web/project_dashboard.erb
+++ b/trunk/server/damagecontrol/web/project_dashboard.erb
@@ -1,5 +1,5 @@
 <html>
-<title><% project_name %> dashboard</title>
+<title><%= project_name %> dashboard</title>
 <body>
 
 <h1><img src="	images/lastcompletedstatus?project_name=<%= project_name %>"/> <%= project_name %></h1>
