--- a/trunk/server/damagecontrol/web/decorators/default.erb
+++ b/trunk/server/damagecontrol/web/decorators/default.erb
@@ -53,6 +53,8 @@ bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla
 </div>
 
 <div class="footer">
+This stuff displays best in a Mozilla based browser. Try <a href="http://www.mozilla.org/products/firefox/">Firefox</a>.
+<br>
 <%= html_quote(DamageControl::VERSION_TEXT) %>
 </div>
 
