tell browser not to cache

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -2,6 +2,7 @@
 <head>
 <title>Example Design</title>
 <link type="text/css" rel="stylesheet" href="css/style.css">
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
 </head>
 <body onLoad="distributeCvsrootFields()">
 <script><!--
