--- a/trunk/server/damagecontrol/web/project_dashboard.erb
+++ b/trunk/server/damagecontrol/web/project_dashboard.erb
@@ -1,10 +1,14 @@
 <html>
+<head>
 <title><%= project_name %> dashboard</title>
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+<link type="text/css" rel="stylesheet" href="css/style.css">
+</head>
 <body>
 
 <table class="main-table">
 <tr><td>
-<h1 class="pane"><img src="	images/lastcompletedstatus?project_name=<%= project_name %>"/> <%= project_name %></h1>
+<h1 class="pane"><img src="images/lastcompletedstatus?project_name=<%= project_name %>"/> <%= project_name %></h1>
 </td></tr>
 
 <tr><td>
