--- a/trunk/server/damagecontrol/web/dashboard.erb
+++ b/trunk/server/damagecontrol/web/dashboard.erb
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Dashboard</title>
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
 <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 <body>
