--- a/trunk/server/damagecontrol/web/decorators/default.erb
+++ b/trunk/server/damagecontrol/web/decorators/default.erb
@@ -22,9 +22,9 @@
 <div class="task-entry"><a href="dashboard">Dashboard</a></div>
 <div class="task-entry">
 <% if auto_refresh? %>
-  <a href="<%= auto_refresh_url_prefix %>auto_refresh=false">Auto refresh off</a>
+  <a href="<%= auto_refresh_url_prefix %>auto_refresh=false">Turn auto refresh off</a>
 <% else %>
-  <a href="<%= auto_refresh_url_prefix %>auto_refresh=true">Auto refresh on</a>
+  <a href="<%= auto_refresh_url_prefix %>auto_refresh=true">Turn auto refresh on</a>
 <% end %>
 </div>
 
