--- a/trunk/server/damagecontrol/web/decorators/default.erb
+++ b/trunk/server/damagecontrol/web/decorators/default.erb
@@ -26,7 +26,6 @@
 	<%= breadcrumbs %>
 	</div>
 	<div class="right-top-nav">
-	<%= right_top_nav %>
 	</div>
 </div>
 
@@ -38,12 +37,22 @@
 <div class="task-panel">
 
 	<% if !tasks.empty? then %>
-		<div class="task-entry">&nbsp;</div>
-	
-		<div class="task-header">Actions</div>
+		<div class="task-entry">
+			<form action="project">
+				Search <%if(project_name)%><%= project_name %><%end%> builds: 
+				<input name="search" value="<%= request.query['search'] %>"/>
+				<input name="action" value="search" type="hidden"/>
+				<% if(project_name) %>
+				<input name=project_name value="<%= project_name %>" type="hidden"/>
+				<% end %>
+				<input type="submit" value="Go"/>
+			</form>
+		</div>
+
 		<% tasks.each do |name, url| %>
 			<div class='task-entry'><a href="<%= url %>"><%= name %></a></div>
 		<% end %>
+		<div class='task-entry'><a href="root/<%= project_name %>/checkout\">Checked out files...</a></div>
 	<% end %>
 
 </div>
