--- a/trunk/server/damagecontrol/web/css/style.css
+++ b/trunk/server/damagecontrol/web/css/style.css
@@ -18,8 +18,12 @@ img {
   vertical-align: middle;
 }
 
+.scm_info {
+  width: 480px;
+}
+
 .config_cell {
-  width: 240px;
+  width: 160px;
 }
 
 .top-panel {
