--- a/trunk/server/damagecontrol/web/project_dashboard.erb
+++ b/trunk/server/damagecontrol/web/project_dashboard.erb
@@ -13,10 +13,10 @@
 </td></tr>
 
 <tr><td>
-<table class="pane" width="100%">
+<table class="pane">
 
   <tr class="pane">
-    <td class="pane-header" colspan="3">
+    <td class="pane-header">
 <% if find_method == "history"%>
     Build history
 <% else %>
@@ -46,14 +46,12 @@
       color = if build.successful? then "green" else "red" end
       color = "grey" if !build.completed?
       image = "images/#{color}-16.gif"
-      link_start = ""
-      link_start = "#{build.project_name } " if (find_method == "search")
-      label = "##{build.label}"; 
-      label = build.status if label == "#"
-      link_text = "#{link_start}#{build.timestamp_for_humans} (#{label})"
+      url = "?action=build_details&project_name=#{build.project_name}&timestamp=#{build.timestamp}"
+      prefix = ""
+      prefix = "#{build.project_name} " if (find_method == "search")
   %>
   <tr class="pane">
-    <td class="pane"><img src="<%= image %>" />&nbsp;<a href="log?project_name=<%= build.project_name %>&timestamp=<%= build.timestamp %>"><%= link_text %></a></td>
+    <td class="pane"><img src="<%= image %>" />&nbsp;<a href="<%= url %>"><%= prefix %><%= build_description(build) %></a></td>
   </tr>
 <% end %>
 
