--- a/trunk/server/damagecontrol/web/build.erb
+++ b/trunk/server/damagecontrol/web/build.erb
@@ -13,10 +13,10 @@ prev_build = build_history_repository.prev(build)
 next_build = build_history_repository.next(build)
 
 prev_link = ""
-prev_link = "&lt;<a href=\"#{build_url(prev_build)}\">#{build_description(prev_build)}</a>" if prev_build
+prev_link = "&lt;<a href=\"#{build_url(prev_build)}\">#{build_description(prev_build)}</a> | " if prev_build
 
 next_link = ""
-next_link = "<a href=\"#{build_url(next_build)}\">#{build_description(next_build)}</a>&gt;" if next_build
+next_link = " | <a href=\"#{build_url(next_build)}\">#{build_description(next_build)}</a>&gt;" if next_build
 
 %>
 <h1 class="pane"><img src="images/timestampstatus?project_name=<%= project_name %>&timestamp=<%= request.query['timestamp'] %>"/> <%= build_description(build) %></h1>
