--- a/trunk/server/damagecontrol/web/decorators/default.erb
+++ b/trunk/server/damagecontrol/web/decorators/default.erb
@@ -13,7 +13,7 @@
 <body>
 
 <div class="top-panel">
-<img class="logo" src="images/damagecontrol-logo.png" />
+<a href="http://damagecontrol.codehaus.org/"><img class="logo" src="images/damagecontrol-logo.png"/></a>
 <% if auto_refresh? %>
   <a href="<%= auto_refresh_url_prefix %>auto_refresh=false">Turn auto refresh off</a>
 <% else %>
